Thu Dec 16 11:43:28 GMT 2004  Olly Betts <olly@survex.com>

	* scriptindex.cc: Fixed "Unknown Exception" when trying to "unhtml"
	  text which contains "</body>" (bug#61).  This bug was introduced in
	  0.8.4.
 
Thu Dec 16 11:28:25 GMT 2004  Olly Betts <olly@survex.com>

	* myhtmlparse.cc: <h1> - <h6> and </h1> - </h6> should leave a
	  space into the dumped HTML.

Wed Dec 15 15:53:55 GMT 2004  Richard Boulton <richard@tartarus.org>

	* dbi2omega: Add a comment to the start of the file detailing what
	  dbi2omega does.

Wed Dec 15 15:08:41 GMT 2004  Richard Boulton <richard@tartarus.org>

	* omindex.cc: Change behaviour of crawler such that it doesn't
	  follow symbolic links any more.  Add "--follow" command
	  line option to turn following of symlinks back on.

Wed Dec 08 16:31:46 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS: Final update for 0.8.4.

Tue Dec 07 18:16:32 GMT 2004  Olly Betts <olly@survex.com>

	* indextext.h: Fixed to compile with GCC 3.x.

Tue Dec 07 18:15:39 GMT 2004  Olly Betts <olly@survex.com>

	* omega.cc,omindex.cc,scriptindex.cc: Use the new
	  Database/WritableDatabase constructors.

Tue Nov 30 22:02:33 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.8.4 release.

Wed Nov 24 04:50:52 GMT 2004  Olly Betts <olly@survex.com>

	* templates/godmode: Finished off godmode template.

Wed Nov 24 04:12:09 GMT 2004  Olly Betts <olly@survex.com>

	* query.cc: If there's only a boolean query so we promote it to be
	  the query, switch to boolean weights.

Wed Nov 24 03:29:36 GMT 2004  Olly Betts <olly@survex.com>

	* Makefile.am,myhtmlparse.cc,myhtmlparse.h,omindex.cc,scriptindex.cc:
	  Factored out MyHtmlParser into a separate file so it can be used
	  in scriptindex too to give scriptindex the same improved HTML
	  parsing which omindex just got.

Wed Nov 24 02:22:49 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Removed bogus extra line from code which was meant to